Add test to get a string

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ DB_PASSWORD=my_password
 APP_ENV=development  # Can be "production" for a different configuration
 DEBUG_MODE=true
 INTERVAL=10
+STR="Hello World!"
