--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-DB_NAME=my_database
+DB_NAME = my_database
 DB_HOST=localhost
 DB_USER=my_username
 DB_PASSWORD=my_password
 # Application settings
-APP_ENV=development  # Can be "production" for a different configuration
+APP_ENV= development  # Can be "production" for a different configuration
 DEBUG_MODE=true
 INTERVAL=10
-STR="Hello World!"
+API=ilU7a2YQPDc==
